# memio

./: .dockerignore  .gitignore  404.html  Dockerfile  LICENSE  README.md  index.html  memio-server.example.yaml  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
api/client/: index.html
api/exceptions/: index.html
api/models/: index.html
api/protocols/: index.html
api/providers-chroma/: index.html
api/providers-letta/: index.html
api/providers-mem0/: index.html
api/providers-qdrant/: index.html
api/providers-supermemory/: index.html
api/providers-zep/: index.html
concepts/architecture/: index.html
contributing/adding-providers/: index.html
contributing/development/: index.html
docs/: index.md
docs/api/: client.md  exceptions.md  models.md  protocols.md  providers-chroma.md  providers-letta.md  providers-mem0.md  providers-qdrant.md  providers-supermemory.md  providers-zep.md
docs/concepts/: architecture.md
docs/contributing/: adding-providers.md  development.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: custom-providers.md  rest-api.md
docs/providers/: chroma.md  letta.md  mem0.md  qdrant.md  supermemory.md  zep.md
docs/specs/: 2026-03-26-documentation-site-design.md  2026-03-26-documentation-site-plan.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/custom-providers/: index.html
guides/rest-api/: index.html
memio/: __init__.py  client.py  exceptions.py  models.py  protocols.py
memio/server/: __init__.py  __main__.py  app.py  config.py  dependencies.py  errors.py  models.py
providers/chroma/: index.html
providers/letta/: index.html
providers/mem0/: index.html
providers/qdrant/: index.html
providers/supermemory/: index.html
providers/zep/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/search/: search_index.json
tests/: test_client.py  test_dotenv.py  test_exceptions.py  test_models.py  test_protocols.py
tests/conformance/: document_store.py  fact_store.py  graph_store.py  history_store.py
tests/integration/: test_chroma.py  test_letta.py  test_mem0.py  test_qdrant.py  test_server.py  test_supermemory.py  test_zep.py
tests/providers/: test_chroma_doc.py  test_letta_document.py  test_letta_fact.py  test_letta_history.py  test_mem0_fact.py  test_mem0_graph.py  test_qdrant_doc.py  test_supermemory_doc.py  test_supermemory_fact.py  test_zep_fact.py  test_zep_graph.py  test_zep_history.py
tests/server/: conftest.py  test_auth.py  test_facts.py  (+6 more)
(+38 files in other folders)
