[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memio"
version = "0.2.1"
description = "Unified memory gateway for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.optional-dependencies]
mem0 = ["mem0ai"]
zep = ["zep-cloud"]
chroma = ["chromadb"]
letta = ["letta-client"]
qdrant = ["qdrant-client[fastembed]"]
supermemory = ["supermemory"]
all = ["mem0ai", "zep-cloud", "chromadb", "letta-client", "qdrant-client[fastembed]", "supermemory"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-mock>=3.12", "pytest-dotenv>=0.5.2"]
docs = ["mkdocs-material", "mkdocstrings[python]"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not integration'"
env_files = [".env"]
markers = [
    "integration: requires real provider API keys",
]
