[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memio"
version = "0.3.1"
description = "Unified memory gateway for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.optional-dependencies]
mem0 = ["mem0ai"]
zep = ["zep-cloud"]
chroma = ["chromadb"]
letta = ["letta-client"]
qdrant = ["qdrant-client[fastembed]"]
supermemory = ["supermemory"]
all = ["mem0ai", "zep-cloud", "chromadb", "letta-client", "qdrant-client[fastembed]", "supermemory"]
server = ["fastapi>=0.115", "uvicorn[standard]>=0.30", "pyyaml>=6.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-mock>=3.12", "pytest-dotenv>=0.5.2", "httpx>=0.27"]
docs = ["mkdocs-material", "mkdocstrings[python]"]

[project.scripts]
memio-server = "memio.server.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not integration'"
env_files = [".env"]
markers = [
    "integration: requires real provider API keys",
]
